Fixed bug #44591 (imagegif's filename parameter)